// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parcel Add support 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' ./source\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"predeploy\\": \\"npm-run-all clean build:es build:css copy:assets\\",
        \\"deploy\\": \\"echo \\\\\\"Not yet implemented - now.sh or surge.sh are supported out of the box\\\\\\" && exit 1\\",
        \\"clean\\": \\"del-cli ./output\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./output --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./output\\",
        \\"prebuild:es\\": \\"npm run clean\\",
        \\"build:es\\": \\"parcel build --out-dir ./output --public-url ./ ./assets/index.html\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prewatch:es\\": \\"npm run clean\\",
        \\"watch:es\\": \\"npm run build:es\\",
        \\"serve\\": \\"parcel ./assets/index.html --out-dir ./output --port 4669 --open\\",
        \\"start\\": \\"npm-run-all --parallel watch:assets serve\\",
        \\"dev\\": \\"stmux [ \\\\\\"npm run watch:es\\\\\\" : \\\\\\"npm run lint:ing\\\\\\" ]\\"
    }
}
"
`;

exports[`Parcel Add support 2`] = `
"module.exports = {
    content: [
        './assets/index.html'
    ]
};"
`;

exports[`Parcel Remove support 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore
        },
        {
            name: .eslintrc.js
        },
        {
            name: package.json
        }
    ]
}
"
`;

exports[`Parcel Remove support 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' ./source\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"predeploy\\": \\"npm-run-all clean build:es build:css copy:assets\\",
        \\"deploy\\": \\"echo \\\\\\"Not yet implemented - now.sh or surge.sh are supported out of the box\\\\\\" && exit 1\\"
    }
}
"
`;
